@@ -159,7 +159,9 @@ dependencies {
     testCompile group: 'com.opentable.components', name: 'otj-pg-embedded', version: '0.13.1'
     testCompile group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.21.0'
     testCompile group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '2.1.0.RELEASE'
-    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '6.14.2'
+
+    testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
+    testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.0.6'
 
 }
 // end::dependencies[]
@@ -319,6 +321,14 @@ sourceSets {
             srcDir('src/aat/resources')
         }
     }
+}
+
+task highLevelDataSetup(type: JavaExec) {
+    dependsOn aatClasses
+
+    main = "uk.gov.hmcts.ccd.userprofile.befta.HighLevelDataSetupApp"
+    classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task smoke() {
